--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@babel/runtime": "^7.7.7",
-    "core-js": "^3.6.1"
+    "core-js": "^3.6.1",
+    "react": "^16.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.5",
     "@babel/plugin-transform-arrow-functions": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6"
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4"
   }
 }
